# fuzzer

./: Cargo.toml  README.md  resuzz22222dddff
backups/: 030json_handler.rs  050main.rs  051main.rs  060main.rs  main.080.rs  o4omain.rs  sqli_payloads.rs  types.rs
src/: cli.rs  config.json  config.json.dist  constants.rs  demos.rs  json_handler.rs  logger.rs  main.rs  payloads.rs  sqli_uri_params.rs  types.rs  utils.rs  versioning_handler.rs
src/resources/: classified_payloads_complete.json
support files/: Credentials spippoling.md  to do list.md
