[package]
name = "fuzzer"
version = "0.8.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
futures = "0.3.31"
html-escape = "0.2.13"
percent-encoding = "2.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] } 
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
